--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 Markdown==3.6
+psycopg2-binary==2.9.9
 PyJWT==2.8.0
 PyYAML==6.0.1
 referencing==0.35.1
