--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ django-filter==24.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+gunicorn==22.0.0
 idna==3.7
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 Markdown==3.6
+packaging==24.1
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 PyYAML==6.0.1
